# fty-asset

./: .gitignore  CMakeLists.txt  LICENSE  README.md
asset/: CMakeLists.txt
asset/asset/: asset-cam.h  asset-db.h  asset-db2.h  asset-dto.h  asset-helpers.h  asset-licensing.h  asset-manager.h  asset-notifications.h  csv.h  error.h  json.h
asset/asset/db/: defs.h  misc.h  select.h
asset/src/: asset-cam.cpp  asset-configure-inform.cpp  asset-db.cpp  asset-helpers.cpp  asset-import.cpp  asset-licensing.cpp  asset-notifications.cpp  csv.cpp  json.cpp
asset/src/db/: misc.cpp  select.cpp
asset/src/manager/: create.cpp  delete.cpp  export.cpp  import.cpp  read.cpp
asset/src/messagebus/: message-bus.cpp  message-bus.h  message.cpp  message.h
asset/test/: create.cpp  import.cpp  norm-name.cpp
asset/test-db/: test-db.cpp
asset/test-db/structure/: bios_asset_device_type.h  bios_asset_element.h  bios_asset_element_type.h  bios_asset_ext_attributes.h  bios_asset_group_relation.h  bios_asset_link.h  bios_asset_link_type.h  bios_device_type.h  bios_discovered_device.h  bios_tag.h
asset/test/db/: insert.cpp  select.cpp
asset/test/db2/: misc.cpp  select.cpp
lib/public_includes/: fty_common_asset.h
lib/src/: fty_asset_dto.cc  fty_common_asset.cc
lib/test/: test.cpp
packaging/debian/: control  copyright
server/: CMakeLists.txt
server/include/: fty_asset_autoupdate.h  fty_asset_inventory.h  fty_asset_server.h
server/src/: asset-server.cc  asset-server.h  dbhelpers.cc  dns.cc  dns.h  fty-asset.cc  fty-lock.h  fty_asset_autoupdate.cc  fty_asset_classes.h  fty_asset_inventory.cc  fty_asset_server.cc  test_str.h  topology_processor.cc  topology_processor.h  total_power.cc  total_power.h
server/src/asset/: asset-cam.cc  asset-cam.h  asset-db.cc  asset-db.h  asset.cc
server/src/topology/: topology_input_powerchain.cc  topology_location.cc
server/src/topology/db/: topology2.cc
server/src/topology/persist/: assettopology.cc
server/tests/: fty_asset_selftest.cc  main.cc
